--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -83,7 +83,6 @@ allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.228.160.190;
 allow 109.237.27.11;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -279,6 +278,7 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
+allow 185.138.88.25;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -536,6 +536,19 @@ allow 192.42.116.219;
 allow 192.76.153.253;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.189.100.194;
+allow 193.189.100.195;
+allow 193.189.100.196;
+allow 193.189.100.197;
+allow 193.189.100.198;
+allow 193.189.100.199;
+allow 193.189.100.200;
+allow 193.189.100.201;
+allow 193.189.100.202;
+allow 193.189.100.203;
+allow 193.189.100.204;
+allow 193.189.100.205;
+allow 193.189.100.206;
 allow 193.237.155.109;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -862,6 +875,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -886,10 +900,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.31;
+allow 23.191.200.30;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -937,6 +952,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1447,6 +1463,19 @@ allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
+allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
+allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
+allow 2a0f:df00:0:255::201;
+allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
+allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1559,6 +1588,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.60.249.223;
 allow 43.160.194.14;
 allow 44.30.4.69;
 allow 45.11.59.28;
@@ -1824,6 +1854,7 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
+allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
