--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -148,6 +148,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -657,6 +658,19 @@ allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
+allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
+allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
+allow 2a0f:df00:0:255::201;
+allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
+allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
