--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -83,7 +83,6 @@ set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.237.27.11;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -279,6 +278,7 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.138.88.25;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -536,6 +536,19 @@ set_real_ip_from 192.42.116.219;
 set_real_ip_from 192.76.153.253;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.189.100.194;
+set_real_ip_from 193.189.100.195;
+set_real_ip_from 193.189.100.196;
+set_real_ip_from 193.189.100.197;
+set_real_ip_from 193.189.100.198;
+set_real_ip_from 193.189.100.199;
+set_real_ip_from 193.189.100.200;
+set_real_ip_from 193.189.100.201;
+set_real_ip_from 193.189.100.202;
+set_real_ip_from 193.189.100.203;
+set_real_ip_from 193.189.100.204;
+set_real_ip_from 193.189.100.205;
+set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.237.155.109;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
@@ -862,6 +875,7 @@ set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
@@ -886,10 +900,11 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -937,6 +952,7 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1447,6 +1463,19 @@ set_real_ip_from 2a0f:85c1:356:5a46::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
+set_real_ip_from 2a0f:df00:0:255::194;
+set_real_ip_from 2a0f:df00:0:255::195;
+set_real_ip_from 2a0f:df00:0:255::196;
+set_real_ip_from 2a0f:df00:0:255::197;
+set_real_ip_from 2a0f:df00:0:255::198;
+set_real_ip_from 2a0f:df00:0:255::199;
+set_real_ip_from 2a0f:df00:0:255::200;
+set_real_ip_from 2a0f:df00:0:255::201;
+set_real_ip_from 2a0f:df00:0:255::202;
+set_real_ip_from 2a0f:df00:0:255::203;
+set_real_ip_from 2a0f:df00:0:255::204;
+set_real_ip_from 2a0f:df00:0:255::205;
+set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1559,6 +1588,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.60.249.223;
 set_real_ip_from 43.160.194.14;
 set_real_ip_from 44.30.4.69;
 set_real_ip_from 45.11.59.28;
@@ -1824,6 +1854,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
+set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.231.118;
