--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -582,6 +582,7 @@ allow 195.47.238.44;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
@@ -900,13 +901,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1162,7 +1162,6 @@ allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a01:e5c0:9ef2::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1391,6 +1390,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
@@ -1622,6 +1622,7 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
+allow 45.141.215.233;
 allow 45.141.215.238;
 allow 45.141.215.40;
 allow 45.141.215.62;
@@ -1878,7 +1879,6 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
-allow 95.181.173.155;
 allow 95.211.244.28;
 allow 96.8.119.172;
 allow 98.128.173.33;
