--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -357,7 +357,6 @@ deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
-deny 2a01:e5c0:9ef2::2;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -586,6 +585,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
