--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -879,6 +879,7 @@ allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
+allow 23.190.216.8;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
@@ -889,6 +890,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -900,6 +902,8 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.3;
 allow 23.191.200.31;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -940,6 +944,7 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
+allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
