--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -879,6 +879,7 @@ deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.155.8.104;
 deny 23.184.48.78;
+deny 23.190.216.8;
 deny 23.191.200.10;
 deny 23.191.200.11;
 deny 23.191.200.12;
@@ -889,6 +890,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -900,6 +902,8 @@ deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.3;
 deny 23.191.200.31;
+deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -940,6 +944,7 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
+deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
