--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -201,7 +201,6 @@ deny 176.118.193.33;
 deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.134.4;
-deny 176.65.140.210;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -873,13 +872,13 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.155.8.104;
 deny 23.184.48.78;
-deny 23.190.216.8;
 deny 23.191.200.10;
 deny 23.191.200.11;
 deny 23.191.200.12;
@@ -899,11 +898,11 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.28;
-deny 23.191.200.3;
+deny 23.191.200.29;
+deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
-deny 23.191.200.5;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -944,11 +943,11 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
-deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1210,6 +1209,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1709,6 +1709,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
