--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -201,7 +201,6 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
-set_real_ip_from 176.65.140.210;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.100;
@@ -873,13 +872,13 @@ set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
-set_real_ip_from 23.190.216.8;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
 set_real_ip_from 23.191.200.12;
@@ -899,11 +898,11 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -944,11 +943,11 @@ set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
-set_real_ip_from 2602:fa86::be24:11ff:fe70:fc41;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1210,6 +1209,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1709,6 +1709,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
